--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+/src/main/resources/static
+/src/main/resources/application-secret.yml
 
 ### DS_Strore ###
 .DS_Store
@@ -31,7 +33,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-/src/main/resources/application-secret.yml
 
 ### NetBeans ###
 /nbproject/private/
