--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
-    asciidoctorExtensions
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+    asciidoctorExt
 }
 
 repositories {
@@ -21,7 +18,7 @@ repositories {
 }
 
 ext {
-    set('snippetsDir', file("build/generated-snippets"))
+    snippetsDir = file('build/generated-snippets')
 }
 
 dependencies {
@@ -47,7 +44,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // Rest Docs
-    asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
@@ -57,10 +54,9 @@ test {
 }
 
 asciidoctor {
-    dependsOn test
-    configurations 'asciidoctorExtensions'
     inputs.dir snippetsDir
-    baseDirFollowsSourceFile()
+    configurations 'asciidoctorExt'
+    dependsOn test
 }
 
 asciidoctor.doFirst {
@@ -75,8 +71,9 @@ task copyDocument(type: Copy) {
 
 bootJar {
     dependsOn asciidoctor
-    from ("${asciidoctor.outputDir}/html5") {
-        into 'static'
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    from ("build/docs/asciidoc") {
+        into 'BOOT-INF/classes/static'
     }
 }
 
@@ -86,5 +83,4 @@ jar {
 
 build {
     dependsOn copyDocument
-    enabled = false
 }
